--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,7 +17,7 @@ jobs:
         go-version: 1.15
 
     - name: Clean
-      run: go mod vendor
+      run: go get -d
 
     - name: Run
       run: go run hh.go
