--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,6 +20,8 @@ jobs:
       run: go get -d && gh --help
 
     - name: Run
-      run: git clone git@github.com:iLychevAD/iLychevAD.github.io.git pages && cd pages && git status && touch test && git add test && git config user.email "github@actions.com" && git config user.name "GitHub Actions" && git commit -m 'Test' && git push origin #go run hh.go
-    - name: Debug
-      run: pwd; ls -lah; git status
+      run: echo hh > index.html
+    - name: Push to Pages
+      env:
+        PAGES_REPO_DEPLOY_KEY: ${{ secrets.PAGES_REPO_DEPLOY_KEY }}
+      run: git clone git@github.com:iLychevAD/iLychevAD.github.io.git pages && cd pages && git checkout hh || git checkout -b hh && mkdir -p hh && cp ../index.html hh/index.html && git add hh/index.html && git config user.email "github-actions@example.com" && git config user.name "GitHub Actions" && git commit -m "`date`" && echo "${PAGES_REPO_DEPLOY_KEY}" > ../.key && chmod 0700 ../.key && GIT_SSH_COMMAND="ssh -i ../.key" git push origin
