--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,8 +1,14 @@
 name: Go
 
 on:
-  push:
-    branches: [ master ]
+#  push:
+#    branches: [ master ]
+   workflow_dispatch:
+     inputs:
+       vacancyAge:
+         description: "vacancyAge (not used)"
+         required: false
+         default: "30"
 
 jobs:
 
