--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,16 +29,16 @@ jobs:
     - name: Clean
       run: go get -d # && gh --help
 
-    - name: Check env vars
-      run: printenv | grep INPUT_
-
     - name: Run
       run: go run hh.go
 
     - name: Push to Pages
       env:
         PAGES_REPO_DEPLOY_KEY: ${{ secrets.PAGES_REPO_DEPLOY_KEY }}
+        INPUT_HH_SEARCH_TEXT: ${{ inputs.hh_search_text }}
+        INPUT_VACANCY_AGE: ${{ inputs.vacancy_age }}
       run: |
+        printenv | grep INPUT_ && \
         echo "${PAGES_REPO_DEPLOY_KEY}" > .key && \
         chmod 0700 .key && \
         GIT_SSH_COMMAND="ssh -i .key" git clone git@github.com:iLychevAD/iLychevAD.github.io.git pages && \
