--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,15 +31,14 @@ jobs:
 
     - name: Run
       env:
-        INPUT_HH_SEARCH_TEXT: ${{ inputs.hh_search_text }}
-        INPUT_VACANCY_AGE: ${{ inputs.vacancy_age }}
+        INPUT_HH_SEARCH_TEXT: ${{ github.event.inputs.hh_search_text }}
+        INPUT_VACANCY_AGE: ${{ github.event.inputs.vacancy_age }}
       run: printenv | grep INPUT_ && go run hh.go
 
     - name: Push to Pages
       env:
         PAGES_REPO_DEPLOY_KEY: ${{ secrets.PAGES_REPO_DEPLOY_KEY }}
       run: |
-        printenv | grep INPUT_ && \
         echo "${PAGES_REPO_DEPLOY_KEY}" > .key && \
         chmod 0700 .key && \
         GIT_SSH_COMMAND="ssh -i .key" git clone git@github.com:iLychevAD/iLychevAD.github.io.git pages && \
